# burn_autogaze

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml  test.yml
benches/: backend_pipeline.rs
crates/bevy_burn_autogaze/: Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs
crates/bevy_burn_autogaze/benches/: viewer_pipeline.rs
crates/bevy_burn_autogaze/src/: config.rs  display.rs  lib.rs  main.rs  platform.rs
crates/bevy_burn_autogaze/tests/: static-source.spec.mjs
crates/bevy_burn_autogaze/www/: index.html
docs/: README.md  api.md  autogaze_birds_metrics.json  benchmarking.md  burn-jepa-sparse-readout-migration.patch  completion-audit.md  performance-goal-loop.md  sparse-readout-integration.md  upstream_fixture_matrix.example.json  validation.md
examples/: render_readme_assets.rs  sparse_video_readout_adapter.rs
src/: config.rs  lib.rs  metrics.rs  model.rs  nodes.rs  patch_diff.rs  pipeline.rs  pyramid.rs  readout.rs  runtime.rs  safetensors_io.rs  teacher.rs  trace.rs  visualization.rs  wasm.rs
src/model/: layout.rs  selection.rs  tensor_utils.rs  tests.rs  trace.rs
tests/: backend_pipeline.rs  native_autogaze_embed_parity.rs  native_autogaze_generate_parity.rs  source_hygiene.rs
tests/fixtures/autogaze_birds_python_generate/: fixture_outputs.safetensors  metadata.json
tests/fixtures/autogaze_official_embed/: fixture_outputs.safetensors
tests/fixtures/autogaze_official_generate/: fixture_outputs.safetensors
tests/fixtures/autogaze_upstream_resize_224/: metadata.json
tests/fixtures/autogaze_upstream_tile_448/: metadata.json
tools/: check_bevy_wasm_demo.sh  check_burn_jepa_sparse_readout_integration.sh  check_completion_audit.sh  check_release_readiness.sh  common.sh  generate_upstream_fixture_matrix.py  run_bevy_perf_matrix.sh  validate_bevy_perf_summary.py
web/: README.md  index.html  main.js  package.json  styles.css
web/bevy_wgpu_anchor/: Cargo.toml
web/bevy_wgpu_anchor/src/: lib.rs
xtask/: Cargo.toml
xtask/assets/: generate_upstream_fixture.py
xtask/src/: main.rs
